k8s/aggregatorapi/aggregator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregator-deployment
  namespace: daprdotnetjourney
  labels:
    app: aggregator
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      service: aggregator
  template:
    metadata:
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: aggregator
        dapr.io/app-port: "80"
        dapr.io/config: "config"
      labels:
        app: aggregator
        service: aggregator
    spec:
      containers:
      - name: aggregator
        image: docker.io/cahityusuf/aggregator-api:v1.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: "500Mi"
            cpu: "0.3"
          limits:
            memory: "500Mi"
            cpu: "0.5"
