k8s/aggregatorapi/aggregator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aggregator-svc
  namespace: daprdotnetjourney
  labels:
    app: aggregator
    service: aggregator
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    service: aggregator
